tests/baselines/reference/parserForStatement7.errors.txt
parserForStatement7.ts(1,6): error TS2406: The left-hand side of a 'for...in' statement must be a variable or a property access.
parserForStatement7.ts(1,10): error TS2304: Cannot find name 'foo'.
parserForStatement7.ts(1,19): error TS2304: Cannot find name 'b'.


==== parserForStatement7.ts (3 errors) ====
    for (new foo() in b) {
         ~~~~~~~~~
!!! error TS2406: The left-hand side of a 'for...in' statement must be a variable or a property access.
             ~~~
!!! error TS2304: Cannot find name 'foo'.
                      ~
!!! error TS2304: Cannot find name 'b'.
    }